//
syntax = "proto3";

import "google/api/annotations.proto";
import "role_message.proto";

option go_package = "/pb";

// RoleService
service RoleService {
  // AddRole - RPC for adding a role
  rpc AddRole(AddRoleRequest) returns (AddRoleResponse) {
    option (google.api.http) = {
      post: "/v1/role/add"
      body: "*"
    };
  };

  // FindRole
  rpc FindRole(FindRoleRequest) returns (FindRoleResponse) {
    option (google.api.http) = {
      get: "/v1/role/get/{name}"
    };
  };

  // FindRoles
  rpc FindRoles(FindRolesRequest) returns (FindRolesResponse) {
    option (google.api.http) = {
      get: "/v1/role/list"
    };
  };
}

// AddRoleRequest
message AddRoleRequest {
  // Role
  Role role = 1;
}

// AddRoleResponse -
message AddRoleResponse {
  // Role Name
  string name = 1;
}

// FindRoleRequest
message FindRoleRequest {
  // Role name to find
  string name = 1;
}

// FindRoleResponse -
message FindRoleResponse {
  // Role to return
  Role role = 1;
}

// FindRolesRequest
message FindRolesRequest {
}

// FindRolesResponse -
message FindRolesResponse {
  // List of roles to return
  repeated Role roles = 1;
}